2006-05-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/template2mak.py:
  - Fixed case where input file argument has no path component (Bart Samwel)
 win32/vc-test.mak.template:
  - Fixed usage of LIBPATH variables (Bart Samwel)
2006-05-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Test for gcc's "deprecated" attribute
  - Don't try to enable gcc's mudflap
  - Remove redundant -lpq arguments
 include/pqxx/compiler-public.hxx, include/pqxx/connection_base.hxx,
 include/pqxx/result.hxx, include/pqxx/tablereader.hxx,
 include/pqxx/tablestream.hxx, include/pqxx/tablewriter.hxx,
 include/pqxx/transaction_base.hxx, include/pqxx/trigger.hxx,
 include/pqxx/util.hxx:
  - Apply gcc's "deprecated" attribute to deprecated functions
 src/connection_base.cxx:
  - Quote prepared statement names so they can contain upper-case letters
 test/Makefile.am.template
  - Fixed empty line after escaped newline that automake stumbled over
 test/test0085.cxx:
  - Test upper-case letters in prepared-statement names
2006-05-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh
  - Use templating script to generate test/Makefile.am as well
 tools/template2mak.py:
  - Don't change directories until after output file has been opened
 tools/*.pl:
  - Got rid of all Perl scripts!
2006-05-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
  - Use Bart Samwel's templating script to generate all Windows Makefiles
  - Skip Windows Makefile generation scripts if Python not installed
 config/sample-headers/compiler/VisualC++.NET-2003/config-internal-compiler.h:
  - This compiler has vsnprintf(), thanks Bart Samwel
 doc/Doxyfile.in:
  - Disabled collaboration graphs (not of much use to end-users)
 include/pqxx/compiler-public.hxx:
  - Select appropriate libpq/libpqxx binaries in Visual C++ (Bart Samwel)
 include/pqxx/connection_base.hxx, include/pqxx/libpq-forward.hxx,
 src/connection_base.cxx:
  - Fix for nasty bug in notice processor handling (Bart Samwel)